# chromiumpocs

./: README.md
dllloaddll/: dllloaddll.cc  dllloaddll.h  dllloadmain.cc
dllloaddll/dllload/: dllload.sln
dllloaddll/dllload/dllload/: dllload.vcxproj  dllload.vcxproj.filters
dllloaddll/dllloaddll/dllloaddll/: dllloaddll.vcxproj  dllloaddll.vcxproj.filters
freqreg/: HybridDetect.h  freqreq.cpp  freqreq.vcxproj  freqreq.vcxproj.filters  frequencylimiter.cc  frequencylimiter.h
hwywasmenv/: Makefile  main.cpp  main.html  mainload.js
icx/src/out.gn/release.x64/: args.gn
inteldeviceservice/: inteldeviceservice.md  src2dst.cmd
inteldeviceservice/dst/src/chrome/browser/: BUILD.gn  about_flags.cc  chrome_browser_main.cc  chrome_browser_main.h  flag-metadata.json  flag_descriptions.cc  flag_descriptions.h
inteldeviceservice/dst/src/content/browser/: browser_interface_binders.cc  browser_interface_binders.h
inteldeviceservice/dst/src/content/browser/device_service/: device_service_browsertest.cc
inteldeviceservice/dst/src/content/browser/renderer_host/: render_process_host_impl.cc
inteldeviceservice/dst/src/content/child/: runtime_features.cc
inteldeviceservice/dst/src/services/device/: BUILD.gn  device_service.cc  device_service.h
inteldeviceservice/dst/src/services/device/device_service/: BUILD.gn  buildflags.gni  device_service_platform_provider.cc  device_service_platform_provider.h  device_service_platform_provider_win.cc  device_service_platform_provider_win.h  device_service_provider_impl.cc  device_service_provider_impl.h  frequencylimiter.cc  frequencylimiter.h
ipfhelper/: LICENSE.txt  README.txt  REDISTRIBUTABLES.txt
ipfhelper/Common/: Ver.h  esif_ccb.h  esif_sdk.h  esif_sdk_data.h  esif_sdk_data_type.h  esif_sdk_event_type.h
ipfhelper/IPF/Samples/Sources/: sampleapp1.c  sampleapp2.c
ipfhelper/IPF/Samples/Windows/: samples.sln
ipfhelper/IPF/Samples/Windows/sampleapp1/: sampleapp1.rc  sampleapp1.vcxproj
ipfhelper/IPF/Samples/Windows/sampleapp2/: sampleapp2.rc  sampleapp2.vcxproj  sampleapp2.vcxproj.filters
ipfhelper/IPF/Sources/Common/: ipf_core_api.h  ipf_version.h
multi_video/: multi_video.css  multi_video.html  multi_video.js
(+22 files in other folders)
