# Copyright 2021 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import ("buildflags.gni")

source_set("device_service") {
  visibility = [ "//services/device:*" ]

  sources = [
    "device_service_platform_provider.cc",
    "device_service_platform_provider.h",
    "device_service_provider_impl.cc",
    "device_service_provider_impl.h",
  ]

  public_deps = [
    "//base",
    "//mojo/public/cpp/bindings",
    "//services/device/public/mojom",
  ]

  if (enable_ipf) {
    libs = [
      "ipf/ipf_control.lib",
      "ipf/ipfcorelib.lib",
      "ipf/CustomPOC_ETW.lib",
    ]
  }
  sources += [
    "device_service_platform_provider_win.cc",
    "device_service_platform_provider_win.h",
  ]
}
